dist_man_MANS = mahimahi.1 mm-link.1 mm-replayserver.1

# the rest just link to one of the above
dist_man_MANS += mm-delay.1
dist_man_MANS += mm-loss.1
dist_man_MANS += mm-onoff.1
dist_man_MANS += mm-throughput-graph.1
dist_man_MANS += mm-delay-graph.1
dist_man_MANS += mm-meter.1
dist_man_MANS += mm-webrecord.1
dist_man_MANS += mm-webreplay.1
