tracedir = $(pkgdatadir)/traces
dist_trace_DATA = README ATT-LTE-driving.down ATT-LTE-driving.up \
	TMobile-UMTS-driving.down TMobile-UMTS-driving.up \
	Verizon-EVDO-driving.down Verizon-EVDO-driving.up \
	Verizon-LTE-driving.down Verizon-LTE-driving.up \
	Verizon-LTE-short.down Verizon-LTE-short.up
